[package]
name = "ips-pointcloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic"
harness = false

[profile.release]
debug = 1
lto = true
opt-level = 3
